# jvars

./: Cargo.toml  README.md
src/: basic.rs  error.rs  ext.rs  lib.rs  path_separator.rs
tests/: change_separator.rs
