[package]
name = "jvars"
version = "0.1.0"
edition = "2024"
authors = ["Alexander Kalashnikov"]
description = "Tools for working with JSON via data paths"
license = "Unlicense"
homepage = "https://github.com/akmitrich/jvars"
repository = "https://github.com/akmitrich/jvars"
readme = "README.md"

[dependencies]
derive_more = { version = "2.0.1", features = ["from"] }
serde_json = "1.0.140"
