[package]
name = "jvars"
version = "0.2.1"
edition = "2024"
authors = ["Alexander Kalashnikov"]
description = "Tools for working with JSON via data paths"
license = "Unlicense"
homepage = "https://github.com/akmitrich/jvars"
repository = "https://github.com/akmitrich/jvars"
readme = "README.md"

[dependencies]
serde_json = "1.0.149"
thiserror = "2.0.18"
